--- a/codigo/slol-spring-backend/bin/pom.xml
+++ b/codigo/slol-spring-backend/bin/pom.xml
@@ -17,46 +17,82 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-             <groupId>com.h2database</groupId>
-             <artifactId>h2</artifactId>
-             <scope>runtime</scope>
-         </dependency>
+             <dependency>
 
-         <dependency>
-               <groupId>mysql</groupId>
-               <artifactId>mysql-connector-java</artifactId>
-         </dependency>
+                    <groupId>org.springframework.boot</groupId>
 
-         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-         <dependency>
-                <groupId>org.postgresql</groupId>
-                <artifactId>postgresql</artifactId>
-                <!-- <version>42.2.1</version> -->
-         </dependency>
+                    <artifactId>spring-boot-starter-web</artifactId>
 
-		
-	</dependencies>
+             </dependency>
+
+ 
+
+             <dependency>
+
+                    <groupId>org.springframework.boot</groupId>
+
+                    <artifactId>spring-boot-starter-test</artifactId>
+
+             </dependency>
+
+            
+
+             <dependency>
+
+                    <groupId>org.springframework.boot</groupId>
+
+                    <artifactId>spring-boot-devtools</artifactId>
+
+             </dependency>
+
+ 
+
+             <dependency>
+
+                    <groupId>org.springframework.boot</groupId>
+
+                    <artifactId>spring-boot-starter-data-jpa</artifactId>
+
+             </dependency>
+
+            
+
+             <dependency>
+
+                    <groupId>org.projectlombok</groupId>
+
+                    <artifactId>lombok</artifactId>
+
+                    <optional>true</optional>
+
+             </dependency>
+
+ 
+
+             <dependency>
+
+                    <groupId>javax.validation</groupId>
+
+                    <artifactId>validation-api</artifactId>
+
+             </dependency>
+
+            
+
+              <dependency>
+
+                    <groupId>com.h2database</groupId>
+
+                    <artifactId>h2</artifactId>
+
+                    <scope>runtime</scope>
+
+             </dependency>
+
+            
+
+</dependencies>
 
 	<build>
 		<plugins>
