Atualizando arquivo .gitingnore

--- a/codigo/slol-spring-backend/.gitignore
+++ b/codigo/slol-spring-backend/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/test/**/target/
+/src/test/
 
 ### STS ###
 .apt_generated
@@ -31,7 +31,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-
-## .class binary files
-*.class
