--- a/codigo/slol-spring-backend/pom.xml
+++ b/codigo/slol-spring-backend/pom.xml
@@ -67,7 +67,11 @@
                     <scope>runtime</scope>
              </dependency>
 
-            
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>42.2.1</version>
+        </dependency>
 
 </dependencies>
 
