--- a/codigo/slol-spring-backend/src/main/resources/application-dev.properties
+++ b/codigo/slol-spring-backend/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/slol
+spring.datasource.url=jdbc:postgresql://localhost:5432/slol?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
