--- a/codigo/slol-spring-backend/pom.xml
+++ b/codigo/slol-spring-backend/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>slol-spring-backend</name>
 	<description>SLOL Backend</description>
+	<packaging>jar</packaging>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
